test/sema/member_expr_non_struct_type.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

fn main() -> void {
  let x = 1;

  let y = x.x;
  // CHECK: [[# @LINE - 1 ]]:11: error: cannot access field of 'int'
}
